fix z-index

--- a/particle.css
+++ b/particle.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  z-index: 0;
+  z-index: 2;
 }
 
 .circle-container {
