--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ h1{
     width: 100%;
     height: auto;
     opacity: 0.8;
-    z-index: -1;
+    z-index: 1;
   }
 }
 
@@ -290,14 +290,14 @@ h1{
   background-color: black;
   padding-bottom: 10%;
   color: black;
-  z-index: -1;
+  z-index: 0;
   background-image: url("img/what-the-hex-dark.png");
 }
 
 .work_section{
   position: relative;
   padding-bottom: 5%;
-  z-index: -1;
+  z-index: 1;
   color: black;
   background-color: #ffffff;
   background-image: url("img/dust_scratches.png");
